--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "firebase": "^12.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
